crates/turborepo/tests/snapshots/boundaries__basic_monorepo_get_boundaries_lints_(npm@10.5.0).snap
---
source: crates/turborepo/tests/boundaries.rs
expression: query_output
---
{
  "data": {
    "boundaries": {
      "items": []
    }
  }
}
