crates/turborepo/tests/snapshots/boundaries__boundaries_circular_get_boundaries_lints_(npm@10.5.0).snap
---
source: crates/turborepo/tests/boundaries.rs
expression: query_output
---
{
  "data": {
    "boundaries": {
      "items": [
        {
          "message": "Circular package dependency detected: @repo/pkg-a -> @repo/pkg-b -> @repo/pkg-c -> @repo/pkg-a",
          "import": null
        }
      ]
    }
  }
}
