crates/turborepo/tests/snapshots/boundaries__boundaries_tags_get_boundaries_lints_(npm@10.5.0).snap
---
source: crates/turborepo/tests/boundaries.rs
expression: query_output
---
{
  "data": {
    "boundaries": {
      "items": [
        {
          "message": "Package `@vercel/allowed-and-denied-tag` found with tag listed in denylist for `@vercel/my-app`: `unsafe`",
          "import": "@vercel/allowed-and-denied-tag"
        },
        {
          "message": "Package `@vercel/not-allowed-dependent` found without any tag listed in allowlist for `@vercel/allowed-and-denied-tag`",
          "import": "@vercel/not-allowed-dependent"
        },
        {
          "message": "Package `@vercel/not-allowed-dependent` found without any tag listed in allowlist for `@vercel/allowed-tag`",
          "import": "@vercel/not-allowed-dependent"
        },
        {
          "message": "Package `@vercel/not-allowed-dependent` found without any tag listed in allowlist for `@vercel/my-app`",
          "import": "@vercel/not-allowed-dependent"
        }
      ]
    }
  }
}
